--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "meme",
   "displayName": "meme",
   "description": "Take a break from your day to day tasks and enjoy a meme.",
-  "version": "0.0.3",
+  "version": "1.0.1",
   "publisher": "MaxCode",
-  "icon": "image/Meme.png",
+  "icon": "image/logo.png",
   "engines": {
     "vscode": "^1.64.0"
   },
@@ -12,7 +12,7 @@
     "Other"
   ],
   "galleryBanner": {
-    "color": "#C80000",
+    "color": "#fcf2ff",
     "theme": "dark"
   },
   "activationEvents": [
